--- a/src/component/Sidebar/Sidebar.css
+++ b/src/component/Sidebar/Sidebar.css
@@ -1,8 +1,17 @@
 .Sidebar {
    flex: 3.5;
   height:calc(100vh-50px);
+  overflow-y: scroll;
 
- 
+}
+::-webkit-scrollbar{
+  width:5px;
+}
+::-webkit-scrollbar-track{
+ background-color: #8b8989;
+}
+::-webkit-scrollbar-thump{
+  background-color:#a19191;
 }
 .sidebarwrapper{
   padding:20px;
