some css and button.

--- a/src/component/Share/Share.css
+++ b/src/component/Share/Share.css
@@ -40,11 +40,26 @@ align-items:center;
 }
 .shareOptions{
   display:flex;
-  
+  margin-left:20px;
 }
 .shareOption{
   display:flex;
   align-items:center;
   margin-right:15px;
   cursor:pointer;
+}
+.shareIcon{
+  font-size:10px;
+  margin-right:3px;
+}
+.shareOptionText{
+  font-size:14px;
+  font-weight:500;
+}
+.shareButton{
+  border:none;
+  padding:7px;
+  border-radius:5px;
+  background:green;
+  font-weight:500;
 }
