--- a/src/component/Rightbar/Rightbar.css
+++ b/src/component/Rightbar/Rightbar.css
@@ -1,3 +1,62 @@
 .Rightbar {
   flex: 4;
 }
+
+.rightWrapper{
+  padding:20px 20px 0 0;
+}
+.birthdayContainer{
+  display:flex;
+  align-items:center;
+}
+.bithdayImg{
+  height:40px;
+  width:40px;
+  margin-right:10px;
+}
+.birthdayText{
+  font-weight:300;
+  font-size:15px;
+}
+.rightbarAd{
+  width:100%;
+  border-radius:10px;
+  margin:30px 0;
+}
+.rightbarTitle{
+  margin-bottom:20px;
+  
+}
+.rightbarFriendsList{
+  padding:0;
+  margin:0;
+  list-style:none;
+}
+.rightbarFriend{
+  display:flex;
+  align-items:center;
+  margin-bottom:15px;
+}
+.rightbarProfileImgContainer{
+  margin-right:10px;
+  position:relative;
+}
+.rightbarProfileImg{
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  object-fit:cover;
+}
+.rightbarOnline{
+  width:12px;
+  height:12px;
+  border-radius:50%;
+  background-color:#00d100;
+  position:absolute;
+  top:-2px;
+  right:0;
+  border:2px solid white;
+}
+.rightbarUsername{
+  font-weight:500;
+}
