--- a/src/component/Share/Share.css
+++ b/src/component/Share/Share.css
@@ -3,9 +3,9 @@
   height:170px;
   border-radius:10px;
   background-color:#fafafa;
- -webkit-box-shadow: 0px 1px 0px 5px rgba(252,255,255,1);
--moz-box-shadow: 0px 1px 0px 5px rgba(252,255,255,1);
-box-shadow: 0px 1px 0px 5px rgba(252,255,255,1);
+ box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+-webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+-moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
 }
 .sharewrapper{
   padding:10px;
@@ -62,4 +62,8 @@ align-items:center;
   border-radius:5px;
   background:green;
   font-weight:500;
+  margin-right:20px;
+  cursor:pointer;
+  color:white;
+  
 }
