--- a/src/component/Topbar/Topbar.css
+++ b/src/component/Topbar/Topbar.css
@@ -1,6 +1,6 @@
 .Topbarcontainer{
   height:50px;
-  width:1000px;
+  width:100%;
   background-color:#1877f2;
   display:flex;
   align-items:center;
